fixed css spacing

--- a/src/pages/styles/Home.css
+++ b/src/pages/styles/Home.css
@@ -14,6 +14,9 @@
     align-items: center;
     padding: 0;
     margin: 0;
+    font-size: 100px;
+    font-weight: 100;
+    font-family: 'Merriweather', serif;
 }
 
 .add-button-container {
@@ -39,7 +42,6 @@
     justify-content: center; 
     align-items: center; 
     box-sizing: border-box;
-    
 }
 
 .see-all-button {
